added the design

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,10 +26,12 @@
   }
 
   .pure-modal .panel-heading {
-    @apply bg-purple-600!important;
+    @apply bg-teal-500!important;
   }
 
   p.product-title {
     margin-top: 0px !important;
   }
 }
+
+@table-head-background-color: #f7f7f7;
